Fix collapse-## styling by removing hardcoded height
Remove hardcoded height: 22.4rem from collapse CSS to allow JavaScript dynamic height control based on tag_collapse-## class names.

--- a/src/quantecon_book_theme/assets/styles/index.scss
+++ b/src/quantecon_book_theme/assets/styles/index.scss
@@ -1149,7 +1149,6 @@ tt {
       }
     }
     .highlight {
-      height: 22.4rem;
       overflow: hidden;
       margin-bottom: 0;
       &:after {
